# reallocate-dashboard

./: .dockerignore  .env.example  .gitignore  Accidents & Injuries_map.html  Dockerfile  LICENSE  Modal Share_map.html  README.md  addressing_conflicts_between_cyclists_and_pedestrians_map.html  app.py  backend.py  barcelona_indicators_dummy.json  env.example  helper_functions.py  init.sh  lyon_indicators_dummy.json  perceived_safety_improvement_map.html  pilot_sites.json  pilot_weather.json  pyproject.toml  requirements.txt  tampere_indicators_dummy.json  visualization_utils.py
.github/workflows/: docker-build-and-run-test.yml
assets/map_snapshots/: Access to Mobility Services_map.html  Accidents & Injuries_map.html  Air Pollution_map.html  Congestion_map.html  GHG Emissions_map.html  Modal Share_map.html  Noise Pollution_map.html  Space Reallocation_map.html  accessibility_improvements_map.html  addressing_conflicts_between_cyclists_and_pedestrians_map.html  bike_parking_capacity_map.html  incident_reduction_map.html  perceived_safety_improvement_map.html  vrus'_perception_of_safety_map.html
components/: custom_title_container.md  header.py  styles.css
components/home/: controls_panel.py  footer.py  header.py  impact_buttons.py  (+6 more)
config/: pilot_static_data.json  pilot_static_data.xlsx
data/: pilot_weather.json  reallocate_all_pilots.geojson
pages/: 1_home.py  2_pilot.py  Barcelona.py  Home.py
static/: indicators.json  legend_macro.html  pilot_static_data.xlsx  styles.css
utils/: config.py  excel_to_json.py  helper_functions.py  visualization_utils.py
(+18 files in other folders)
